Decoupled erlang-related test from autoanswer tests.